added new feature mobile no.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
             <option value="female">Female</option>
             <option value="other">Other</option>
         </select>
-        
+        <!-- added new feature mobile number -->
+        <label for="number">Mobile:</label>
+        <input type="tel" id="phone" name="phone" required>
         
         <button type="submit">Submit</button>
     </form>
