--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@
 </style>
 <body>
     <form>
-        <label for="name">Name:</label>
+        <label for="name">First Name:</label>
         <input type="text" id="name" name="name" required>
+
+        <!-- added last name feature -->
+        <label for="lastName">Last Name:</label>
+        <input type="text" id="lastName" name="lastName" required>
 
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
