--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <label for="number">Mobile:</label>
         <input type="tel" id="phone" name="phone" required>
          <!-- added new field by Tharini -->
-        <label for="nationality">nationality</label>
+        <label for="nationality">Nationality</label>
         <input type="text" id="nationality">
         
         <button type="submit">Submit</button>
